--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,10 @@
 <head>
   <title>{%block title%}{% endblock %}</title>
   <link rel="stylesheet" href="../static/css/styles.css">
+  <link rel="stylesheet" href="/WAMA_Science_Equipment_Catalog/css/home.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   {%block bodycontent%}{% endblock %}
