--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,25 @@
 {%extends 'base.html'%}
 {%block title%}Equipment Catalogue{% endblock %}
 {%block bodycontent%}
+<div class="itemList">
+    <div class="item firstItem even">
+        <div class="itemName">Item 1</div>
+        <div class="description"></div>
+        <div class="quantity"></div>
+        <div class="location"></div>
+        <div class="lastEdit"></div>
+    </div>
+    <div class="item odd">
+    </div>
+    <div class="item even">
+    </div>
+    <div class="item odd">
+    </div>
+    <div class="item even">
+    </div>
+    <div class="item odd">
+    </div>
+    <div class="item lastItem even">
+    </div>
+</div> 
 {% endblock %}
