--- a/templates/home.html
+++ b/templates/home.html
@@ -3,15 +3,15 @@
 {%block bodycontent%}
 <div class="itemList">
     {% for item in items %}
-        <div class="item">
-    <div class="item firstItem even">
+    <div class="item">
         <div class="itemName">{{ item.title }}</div>
         <div class="description">{{ item.description }}</div>
         <div class="quantity">{{ item.quantity }}</div>
         <div class="location">{{ item.location }}</div>
         <div class="lastEdit">{{ item.last_updated }}</div>
+        <a href="{{ url_for('item', item_id=item.id) }}">Edit</a>
     </div>
-    {% endfor %}
+    {% endfor %}    
     </div>
     <div class="item odd">
     </div>
