adding new items

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,11 @@
 {%extends 'base.html'%}
 {%block title%}Equipment Catalogue{% endblock %}
 {%block bodycontent%}
+<div class="navbar">
+    <a href="{{ url_for('root') }}">Browse Items</a>
+    <a href="{{ url_for('add_item') }}">Add an Item</a>
+    <button disabled>Login</button>
+</div>
 <div class="itemList">
     {% for item in items %}
     <div class="item">
@@ -9,7 +14,7 @@
         <div class="quantity">{{ item.quantity }}</div>
         <div class="location">{{ item.location }}</div>
         <div class="lastEdit">{{ item.last_updated }}</div>
-        <a href="{{ url_for('item', item_id=item.id) }}">Edit</a>
+        <a href="{{ url_for('item', item_id=item.id) }}">Update</a>
     </div>
     {% endfor %}    
     </div>
