--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {%block bodycontent%}
 <div class="itemList">
     {% for item in items %}
-    <div class="item">
+    <div class="item firstItem">
         <div class="itemName">{{ item.title }}</div>
         <div class="description">{{ item.description }}</div>
         <div class="quantity">{{ item.quantity }}</div>
@@ -11,8 +11,7 @@
         <div class="lastEdit">{{ item.last_updated }}</div>
         <a href="{{ url_for('item', item_id=item.id) }}">Edit</a>
     </div>
-    {% endfor %}    
-    </div>
+    {% endfor %}
     <div class="item odd">
     </div>
     <div class="item even">
