--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -140,3 +140,32 @@ body{
    border-right: .3vw solid black;
    border-radius: .5vh;
 }
+.navbar {
+   background-color: #333;
+   overflow: hidden;
+   position: fixed;
+   top: 0;
+   right: 0;
+   left: 0;
+   width: 100%;
+   z-index: 1000;
+ }
+
+ .navbar a {
+   float: right;
+   color: #f2f2f2;
+   text-align: center;
+   padding: 20px 16px;
+   text-decoration: none;
+   font-size: 20px;
+ }
+
+ .navbar a:hover {
+   background-color: #ddd;
+   color: black;
+ }
+
+ .navbar a.active {
+   background-color: #04AA6D;
+   color: white;
+ }
