--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -171,3 +171,50 @@ body{
    background-color: #04AA6D;
    color: white;
  }
+
+ .form-container {
+   background-color: #f2f2f2;
+   padding: 20px;
+   border-radius: 10px;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.form-container h1 {
+   text-align: center;
+   color: #333;
+}
+
+.form-container label {
+   font-weight: bold;
+   margin-bottom: 5px;
+   color: #555;
+}
+
+.form-container input[type="text"],
+.form-container textarea {
+   width: 100%;
+   padding: 10px;
+   margin-bottom: 10px;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   box-sizing: border-box;
+}
+
+.form-container input[type="submit"] {
+   background-color: #0a2240;
+   color: white;
+   padding: 10px 20px;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+}
+
+.form-container input[type="submit"]:hover {
+   background-color: #21825c;
+}
+
+.form-container .error {
+   color: red;
+   margin-top: 5px;
+}
+
