--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -1,9 +1,8 @@
-{%extends 'base.html'%}
-{%block title%}Edit Catalogue{% endblock %}
-{%block bodycontent%}
-<h1>Update</h1>
+{% extends 'base.html' %}
+{% block title %}Add Item{% endblock %}
+{% block bodycontent %}
+<h1>Add Item</h1>
 <div class="form-container">
-    <h2>Add New Item</h2>
     <form method="post">
         <div>
             <label for="title">Title:</label>
@@ -26,6 +25,4 @@
         </div>
     </form>
 </div>
-
-
 {% endblock %}
