--- a/templates/home.html
+++ b/templates/home.html
@@ -9,8 +9,10 @@
         <div class="quantity">{{ item.quantity }}</div>
         <div class="location">{{ item.location }}</div>
         <div class="lastEdit">Last Edited: {{ item.last_updated }}</div>
-        <a href="{{ url_for('item', item_id=item.id) }}"><img src = ../imgs/editIcon.png alt = "Edit"></a>
+        <a href="{{ url_for('edit_item', item_id=item.id) }}"><img src="../imgs/editIcon.png" alt="Edit"></a>
+
     </div>
+
     {% endfor %}    
 </div> 
 {% endblock %}
