--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,145 +1,92 @@
-body{
-    background-color: #fff;
-    font-family: inter;
+body {
+   background-color: #fff;
+   font-family: Inter, sans-serif;
 }
- 
- 
-.itemList{
+
+.itemList {
    width: 80vw;
    min-height: 12vh;
    margin-left: 10vw;
-   margin-top: 20vh;
+   margin-top: 5vh;
 }
- 
- 
-.item{
+
+.item {
    width: auto;
    height: 10vh;
 }
- 
- 
-.firstItem{
+
+.firstItem {
    border-top-left-radius: 3vh;
    border-top-right-radius: 3vh;
    background-color: #D9D9D9;
 }
-.lastItem{
+
+.lastItem {
    border-bottom-left-radius: 3vh;
    border-bottom-right-radius: 3vh;
 }
-.even{
+
+.even {
    background-color: #D9D9D9;
 }
-.odd{
+
+.odd {
    background-color: #fff;
-} 
+}
 
-
-.itemName{
-   /*total width = 15vw
-   total height = 10vh*/
-   width: 10vw;
-   height: 5vh;
+.itemName, .description, .quantity, .location, .lastEdit {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
-
-   float: left;
-   padding-left: 3.5vw;
-   margin-right: 1.5vw;
-   padding-top: 2.5vh;
-   padding-bottom: 2.5vh;
-   font-size: 4vh;
-   /*background-color: rebeccapurple;*/
 }
- 
-.description{
-   /*total width = 30vw
-   total height = 10vh*/
+
+.itemName {
+   width: 10vw;
+   padding: 2.5vh 3.5vw;
+   font-size: 4vh;
+   float: left;
+   margin-right: 1.5vw;
+}
+
+.description {
    width: 28vw;
    height: 8vh;
    float: left;
    font-size: 1.5vh;
-   white-space: nowrap;
-   overflow: hidden;
-   text-overflow: ellipsis;
-   
-   margin-top: .5vh;
-   margin-bottom:.5vh;
-   margin-left: .7vw;
-   margin-right: .7vw;
-   border-top: .5vh solid black;
-   border-bottom: .5vh solid black;
-   border-left: .3vw solid black;
-   border-right: .3vw solid black;
-   border-radius: .5vh;
+   margin: 0.5vh 0.7vw;
+   border: 0.5vh solid black;
+   border-radius: 0.5vh;
 }
 
-.quantity{
-   /*total width = 10vw
-   total height = 10vh*/
+.quantity {
    width: 8vw;
    height: 8vh;
    float: left;
    font-size: 2vh;
-   white-space: nowrap;
-   overflow: hidden;
-   text-overflow: hidden;
-
-   margin-top: .5vh;
-   margin-bottom:.5vh;
-   margin-left: .7vw;
-   margin-right: .7vw;
-   border-top: .5vh solid black;
-   border-bottom: .5vh solid black;
-   border-left: .3vw solid black;
-   border-right: .3vw solid black;
-   border-radius: .5vh;
+   margin: 0.5vh 0.7vw;
+   border: 0.5vh solid black;
+   border-radius: 0.5vh;
 }
 
-.location{
-   /*total width = 18vw
-   total height = 50vh*/
+.location {
    width: 15vw;
    height: 3vh;
    float: left;
    font-size: 1.5vh;
-   white-space: nowrap;
-   overflow: hidden;
-   text-overflow: hidden;
-
-   margin-top: .5vh;
-   margin-bottom:.5vh;
-   margin-left: .7vw;
-   margin-right: .7vw;
-   border-top: .5vh solid black;
-   border-bottom: .5vh solid black;
-   border-left: .3vw solid black;
-   border-right: .3vw solid black;
-   border-radius: .5vh;
+   margin: 0.5vh 0.7vw;
+   border: 0.5vh solid black;
+   border-radius: 0.5vh;
 }
 
-.lastEdit{
-   /*total width = 18vw
-   total height = 50vh*/
+.lastEdit {
    width: 15vw;
    height: 3vh;
    float: left;
    font-size: 1.2vh;
-   white-space: nowrap;
-   overflow: hidden;
-   text-overflow: hidden;
    color: grey;
-
-   margin-top: .5vh;
-   margin-bottom:.5vh;
-   margin-left: .7vw;
-   margin-right: .7vw;
-   border-top: .5vh solid black;
-   border-bottom: .5vh solid black;
-   border-left: .3vw solid black;
-   border-right: .3vw solid black;
-   border-radius: .5vh;
+   margin: 0.5vh 0.7vw;
+   border: 0.5vh solid black;
+   border-radius: 0.5vh;
 }
 
 .navbar {
@@ -151,28 +98,28 @@ body{
    left: 0;
    width: 100%;
    z-index: 1000;
- }
+}
 
- .navbar a {
+.navbar a {
    float: right;
    color: #f2f2f2;
    text-align: center;
    padding: 20px 16px;
    text-decoration: none;
    font-size: 20px;
- }
+}
 
- .navbar a:hover {
+.navbar a:hover {
    background-color: #ddd;
    color: black;
- }
+}
 
- .navbar a.active {
+.navbar a.active {
    background-color: #04AA6D;
    color: white;
- }
+}
 
- .form-container {
+.form-container {
    background-color: #f2f2f2;
    padding: 20px;
    border-radius: 10px;
@@ -218,3 +165,36 @@ body{
    margin-top: 5px;
 }
 
+.search-container {
+   width: 80vw;
+   margin: 20px auto;
+   display: flex;
+   justify-content: center;
+}
+
+.search-form {
+   display: flex;
+   width: 100%;
+}
+
+.search-form input[type="text"] {
+   flex: 1;
+   padding: 10px;
+   border: 2px solid #0a2240;
+   border-radius: 5px 0 0 5px;
+   font-size: 16px;
+}
+
+.search-form button {
+   padding: 10px;
+   border: none;
+   background-color: #0a2240;
+   color: white;
+   font-size: 16px;
+   border-radius: 0 5px 5px 0;
+   cursor: pointer;
+}
+
+.search-form button:hover {
+   background-color: #21825c;
+}
