--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,13 @@
-{%extends 'base.html'%}
-{%block title%}Equipment Catalogue{% endblock %}
-{%block bodycontent%}
+{% extends 'base.html' %}
+{% block title %}Equipment Catalogue{% endblock %}
+{% block bodycontent %}
+<h1>Equipment Catalogue</h1>
+<div class="search-container">
+    <form class="search-form" action="{{ url_for('search') }}" method="GET">
+        <input type="text" name="query" placeholder="Search for items" required>
+        <button type="submit">Search</button>
+    </form>
+</div>
 <div class="itemList">
     {% for index, item, is_even in items %}
     <div class="item {% if is_even %}even{% else %}odd{% endif %} {% if index == 0 %}firstItem{% endif %} {% if index == items|length-1 %}lastItem{% endif %}">
@@ -10,9 +17,7 @@
         <div class="location">{{ item.location }}</div>
         <div class="lastEdit">Last Edited: {{ item.last_updated }}</div>
         <a href="{{ url_for('edit_item', item_id=item.id) }}"><img src="../imgs/editIcon.png" alt="Edit"></a>
-
     </div>
-
-    {% endfor %}    
-</div> 
+    {% endfor %}
+</div>
 {% endblock %}
